# G.O.D

./: .gitignore  README.md  Taskfile.yml  blog-report.md  bootstrap.sh  config_handler.py  const.py  docker-compose.dev.yml  docker-compose.yml  dockerfile_miner  dockerfile_miner_diffusion  dockerfile_validator  dockerfile_validator_diffusion  endpoints.py  image_prep_test.py  job_handler.py  main.py  nodes.csv  nodes_fixed.csv  pyproject.toml  requirements.txt  schemas.py  training_worker.py  utils.py
Datasets/: ds_example.json
Validation/: checking.py  test_axolotl  test_axolotl.yml
api/: endpoints.py
api/configs/: config_handler.py
config/: grafana-validator-errors.json
configs/: base.yml  config_handler.py
core/: constants.py  create_config.py  docker_utils.py  ds_example.json  utils.py  validators.py
core/config/: abc123.toml  base.yml  base_diffusion  base_diffusion.toml  config_handler.py
core/dataset/: prepare_dataset.py  prepare_diffusion_dataset.py
core/models/: config_models.py  payload_models.py  task_config_models.py  utility_models.py
data/: dataset_validator.py
db/migrations/: 20241017130558_migration_scoring.sql
docs/: dev.md  internal_comp.md  miner_setup.md  mining.md  validator_setup.md
miner/: config.py  constants.py  dependencies.py  job_handler.py  requirements.txt  server.py  training_worker.py
miner/endpoints/: generic.py  tuning.py
miner/logic/: job_handler.py  training_worker.py
mining/: job_handler.py  training_worker.py
scripts/: install_axolotl.sh  run_script_hf.sh  run_script_non_hf.sh
validator/: asgi.py  checking.py  constants.py  prompts.yml  requirements.txt  server.py  synth.py  test_axolotl.yml
validator/augmentation/: augmentation.py
validator/core/: config.py  constants.py  cycle.py  dependencies.py  models.py  refresh_nodes.py  schemas.py  task_config_models.py  weight_setting.py
validator/cycle/: main.py  process_tasks.py  util_functions.py
validator/db/: constants.py  (+3 more)
(+54 files in other folders)
